fixed overflow photos

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     }
 
     body {
-        @apply bg-beige dark:bg-black min-w-[320px]
+        @apply bg-beige dark:bg-black min-w-[320px] overflow-x-clip
     }
 
     #root {
